projects/examples/source/02.02.06.cpp
#include <cassert>

////////////////////////////////////////////

int main()
{
    auto x = (1 + 2) / (1 + 2);

//  ----------------------------------------

//	x = x + ++x; // error

//  ----------------------------------------

	[[maybe_unused]] auto y = x = 1 + 2 + 3;

//  ----------------------------------------

//	assert((++x, ++y) == 7); // bad
}